# monumento-google-places-py

./: .gitignore  pyproject.toml  readme.md  requirements.txt  test_script.py
local_scripts/: query_places_nearby.py  read_us_states_map.py
monumentoGooglePlaces/: base.py  logger.py  nearby.py
src/: base.py  get_operators.py  utils.py
